--- a/package.json
+++ b/package.json
@@ -8,13 +8,16 @@
   },
   "dependencies": {
     "@types/uuid": "^8.3.1",
+    "csv-parse": "^4.16.0",
     "express": "^4.17.1",
     "multer": "^1.4.3",
+    "swagger-ui-express": "^4.1.6",
     "uuid": "^8.3.2"
   },
   "devDependencies": {
     "@types/express": "^4.17.13",
     "@types/multer": "^1.4.7",
+    "@types/swagger-ui-express": "^4.1.3",
     "@typescript-eslint/eslint-plugin": "^4.29.1",
     "@typescript-eslint/parser": "4^16.0",
     "eslint": "^7.32.0",
